--- a/tema.scss
+++ b/tema.scss
@@ -23,22 +23,18 @@ table {
   border: 1px solid;
 }
 
-tbody {
-  td {
-    border: none;
-  }
-}
-
-tfoot {
-  td {
-    font-size: 80%;
-    font-style: italic;
-    border: hidden;
-    border-top: 1px solid;
-  }
-}
-
 table caption {
   font-weight: bold;
   caption-side: top;
+}
+
+tbody td {
+  border: none;
+}
+
+tfoot td {
+  font-size: 80%;
+  font-style: italic;
+  border: hidden;
+  border-top: 1px solid;
 }
