--- a/tema.scss
+++ b/tema.scss
@@ -20,7 +20,7 @@ video {
 }
 
 table {
-  border: 1px solid;
+  border: 1px solid #808080;
 }
 
 table caption {
@@ -28,13 +28,17 @@ table caption {
   caption-side: top;
 }
 
-tbody td {
+thead th, tbody td {
   border: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5;
+  padding-bottom: 5px;
 }
 
 tfoot td {
   font-size: 80%;
   font-style: italic;
   border: hidden;
-  border-top: 1px solid;
+  border-top: 1px solid #808080;
 }
