--- a/tema.scss
+++ b/tema.scss
@@ -29,11 +29,11 @@ table caption {
 }
 
 thead th, tbody td {
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-top: 4px;
+  padding-bottom: 4px;
   border: none;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5;
-  padding-bottom: 5px;
 }
 
 tfoot td {
