--- a/tema.scss
+++ b/tema.scss
@@ -11,15 +11,10 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
-@media only screen and (max-width: 1000px) {
-  .mobil-tekst {
-    display: block;
-    text-align: center;
-    font-style: italic;
-    border: 1px solid #808080;
-    font-size: 80%;
-    padding: 5px;
-    margin-bottom: 10px;
+.mobil-tekst {
+  display: none;
+  @media only screen and (max-width: 600px) { 
+    display: inline-block;
   }
 }
 
