--- a/tema-lys.scss
+++ b/tema-lys.scss
@@ -1,5 +1,5 @@
 /*-- scss:rules --*/
 // Herunder angives CSS
 kbd {
-  background-color: #f8f9fa !important;
+  background-color: #F8F9FA !important;
 }
