--- a/tema-moerk.scss
+++ b/tema-moerk.scss
@@ -1,5 +1,5 @@
 /*-- scss:rules --*/
 // Herunder angives CSS
 kbd {
-  background-color: #070605 !important;
+  background-color: #6F6F6F !important;
 }
