--- a/tema.scss
+++ b/tema.scss
@@ -5,7 +5,7 @@ $navbar-bg: #398FCC;
 $link-color: #398FCC;
 $font-family-sans-serif: Verdana;
 $font-family-monospace: Verdana;
-$font-size-root: 11;
+$font-size-root: 14px;
 
 // ----------------------------------------------------------------------------------------------------
 /*-- scss:rules --*/
