--- a/tema.scss
+++ b/tema.scss
@@ -44,6 +44,11 @@ thead th, tbody td {
   border: none;
 }
 
+thead th {
+  background-color: #1C2833;
+  color: #FFFFFF;
+}
+
 tfoot td {
   font-size: 80%;
   font-style: italic;
