--- a/tema.scss
+++ b/tema.scss
@@ -21,6 +21,11 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
+figcaption {
+  text-align: left !important;
+  font-style: italic !important;
+}
+
 img {
   border-radius: 4px;
 }
